# Envisioned

./: .gitignore  NOTICE  README.md
gui/: index.html  package-lock.json  package.json  scuf_config.py  scuf_virtual_pad_managed.py  virtual_pad_config.json
gui/src/: App.css  App.tsx  types.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: main.rs
gui/src/components/: AssignPanel.tsx  ControllerView.tsx  Sidebar.tsx  ThumbsticksView.tsx  VibrationView.tsx
gui/templates/: default_profile_clean.xml  default_profile_with_one_remap.xml
