[package]
name = "envisioned"
version = "0.1.0"
description = "Envisioned — unofficial Linux configuration GUI for the SCUF Envision Pro controller"
authors = ["Julian Cotto"]
license = "Apache-2.0"
repository = "https://github.com/Gicotto/Envisioned"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
